--- a/src/content/blogs/hidden-jtag-qualcomm-snapdragon-usb.mdx
+++ b/src/content/blogs/hidden-jtag-qualcomm-snapdragon-usb.mdx
@@ -6,7 +6,7 @@ image: /linaro-website/images/blog-hero-images/USB_bjjsaa.jpg
 tags:
   - linux-kernel
   - qualcomm
-author: linaro
+author: casey-connolly
 related: []
 
 ---
