--- a/src/content/blogs/initial-u-boot-release-for-qualcomm-platforms.mdx
+++ b/src/content/blogs/initial-u-boot-release-for-qualcomm-platforms.mdx
@@ -6,7 +6,7 @@ image: linaro-website/images/blog/U-Boot_blg_esrd1w.png
 tags:
   - qualcomm
   - u-boot
-author: caleb-connolly
+author: casey-connolly
 related: []
 ---
 
