Change Casey's name in posts as well.

--- a/src/content/blogs/linaro-fosdem-2024.mdx
+++ b/src/content/blogs/linaro-fosdem-2024.mdx
@@ -19,11 +19,11 @@ related: []
 
 The Université libre de Bruxelles held the event on February 3rd and 4th, and the program was more prosperous than ever. FOSDEM is always considered the best IT conference and it is entirely volunteer driven. Linaro attended the event with eight talks (having submitted about a dozen): a record-breaking presence and acceptance ratio! Beer was constantly flowing at Fosdem, yet there is no indication that Belgian beer is much better this year to draw the attention of so many of the following Linaro open-source contributors.
 
-**Caleb Connolly** presented **U-Boot for modern Qualcomm phones**, where they discussed how bootloaders are often one of the most significant pain points when booting upstream Linux on Qualcomm devices. Caleb points out how distros which aim to support Qualcomm devices currently have to handle 4 versions of the Android boot image header plus many additional quirks. In this talk, they give a brief introduction of EFI bootloader, how they work, and how U-Boot fits into the picture as a second-stage bootloader. Caleb covered the work they've been doing to improve Qualcomm support in upstream U-Boot and how folks can drastically lower the barrier of entry for distro support on Qualcomm phones. Lastly, they discussed the new process for porting a Qualcomm device and SoC to U-Boot and showcased a cool demo booting Linux with EFI runtime support on a Qualcomm phone.
+**Casey Connolly** presented **U-Boot for modern Qualcomm phones**, where they discussed how bootloaders are often one of the most significant pain points when booting upstream Linux on Qualcomm devices. Casey points out how distros which aim to support Qualcomm devices currently have to handle 4 versions of the Android boot image header plus many additional quirks. In this talk, they give a brief introduction of EFI bootloader, how they work, and how U-Boot fits into the picture as a second-stage bootloader. Casey covered the work they've been doing to improve Qualcomm support in upstream U-Boot and how folks can drastically lower the barrier of entry for distro support on Qualcomm phones. Lastly, they discussed the new process for porting a Qualcomm device and SoC to U-Boot and showcased a cool demo booting Linux with EFI runtime support on a Qualcomm phone.
 
 [Presentation Slides](https://fosdem.org/2024/events/attachments/fosdem-2024-1716-u-boot-for-modern-qualcomm-phones/slides/22104/fosdem24_aDevbas.pdf) // [Talk Video](https://ftp.belnet.be/mirror/FOSDEM/video/2024/h1309/fosdem-2024-1716-u-boot-for-modern-qualcomm-phones.av1.webm)
 
-![Caleb presenting about U-boot in FOSDEM24](/linaro-website/images/blog/u-boot-for-modern)
+![Casey presenting about U-boot in FOSDEM24](/linaro-website/images/blog/u-boot-for-modern)
 
 **Bryan O'Donoghue** talked about a **fully open-source stack for MIPI cameras**. It was a joint talk with Bryan and Hans De Goede from Redhat about supporting MIPI cameras with a fully open libcamera / Linux kernel stack.
 
