--- a/src/content/events/fosdem-24-is-here-and-linaro-is-present-at-the-event-more-than-ever.mdx
+++ b/src/content/events/fosdem-24-is-here-and-linaro-is-present-at-the-event-more-than-ever.mdx
@@ -18,7 +18,7 @@ button:
 
 The 2024 edition of [Fosdem](https://fosdem.org/2024/) is upon us. The [Université libre de Bruxelles](https://fosdem.org/2024/practical/transportation/) will host the event again on February 3rd and 4th, and the program is more prosperous than ever. Linaro will attend the event with eight talks (having submitted about a dozen): a record-breaking presence and acceptance ratio! Beer is constantly flowing at Fosdem, yet there is no indication that Belgian beer is much better this year to draw the attention of so many of the following Linaro open-source contributors. Neil Armstrong will open the dance by discussing Linux mainline kernel support for Qualcomm’s SoCs. Over the past years, Qualcomm’s supported platforms have significantly increased, and features such as power management and DSP, historically complex to support, have vastly improved.
 
-Yet, what use can you make of a Linux kernel without a proper EFI bootloader? Caleb Connolly will talk about the work they have been doing to improve Qualcomm support in upstream U-Boot and how such work can drastically lower the barrier of entry for distro support on Qualcomm-powered phones, IoT, IIoT, and auto devices.
+Yet, what use can you make of a Linux kernel without a proper EFI bootloader? Casey Connolly will talk about the work they have been doing to improve Qualcomm support in upstream U-Boot and how such work can drastically lower the barrier of entry for distro support on Qualcomm-powered phones, IoT, IIoT, and auto devices.
 
 Speaking of phones and consumer devices, what are they without a camera? And what good is a camera for without the decency of a fully open, libcamera-based MIPI stack? Bryan O'Donoghue has done some work in this area, and he’ll be introducing it at Fosdem.
 
