refactor modal and api, update webinar

--- a/src/content/events/inside-linux-on-snapdragon.mdx
+++ b/src/content/events/inside-linux-on-snapdragon.mdx
@@ -10,9 +10,16 @@ event_start: 2025-07-09 16:30:00 +00:00
 event_end: 2025-07-09 17:30:00 +00:00
 image: linaro-website/images/events/Webinar-Banner_1_gvut0m.png
 type: webinar
+webinarContactButton:
+  button_text: View Recording
+  form_id: "9"
+  modal_id: webinarContactForm
+  description: Request Recording
+  formName: webinar_contact
+  webinarDataId: linux_snapdragon
 button:
-  text: Register Now
-  url: https://www.eventbrite.co.uk/e/inside-linux-on-snapdragon-how-to-reach-production-grade-with-cra-tickets-1400432434109?aff=oddtdtcreator
+  text: View Recording
+  url: /events/inside-linux-on-snapdragon-how-to-reach-production-grade-with-cra?webinar_form_modal
 ---
 
 📆 Date: Wednesday 9 July 2025
@@ -34,5 +41,3 @@ You’ll learn how to:
 - Perform functional, performance and CRA-compliant testing
 
 Are you developing connected products on Qualcomm SoCs? This webinar is for you! Linaro can help you accelerate your time-to-market while staying compliant and secure!
-
-[Register here](https://www.eventbrite.co.uk/e/inside-linux-on-snapdragon-how-to-reach-production-grade-with-cra-tickets-1400432434109?aff=oddtdtcreator)
