--- a/src/content/events/scaling-interoperability-testing-with-onelab.mdx
+++ b/src/content/events/scaling-interoperability-testing-with-onelab.mdx
@@ -16,6 +16,7 @@ webinarContactButton:
   modal_id: webinarContactForm
   description: Request Recording
   formName: webinar_contact
+  webinarDataId: onelab_scaling
 button:
   text: View Recording
   url: /events/scaling-interoperability-testing-with-onelab?webinar_form_modal
