--- a/src/content/blogs/linux-on-snapdragon-x-elite.mdx
+++ b/src/content/blogs/linux-on-snapdragon-x-elite.mdx
@@ -7,7 +7,7 @@ image: linaro-website/images/blog/4d2dae06-d294-4d4b-aeb2-56bc4f76d94a_vudrqm.jp
 tags:
   - qualcomm
   - open-source
-  - linus-kernel
+  - linux-kernel
 author: ettore-chimenti
 related: []
 ---
