--- a/src/content/blogs/linux-on-snapdragon-x-elite.mdx
+++ b/src/content/blogs/linux-on-snapdragon-x-elite.mdx
@@ -79,8 +79,8 @@ Here is a video of the <strong>TUXEDO Elite 14 Gen1</strong> prototype showcased
 
 <video controls width="100%">
   <source
-    src="https://static.linaro.org/videos/copy_8494357F-6B47-4DC4-8C13-99BB510BF447+(1).MOV"
-    type="video/MOV"
+    src="https://static.linaro.org/videos/8494357F-6B47-4DC4-8C13-99BB510BF447.mp4"
+    type="video/mp4"
   />
   Your browser does not support the video tag.
 </video>
