tweak title style

--- a/src/content/blogs/linux-on-snapdragon-x-elite.mdx
+++ b/src/content/blogs/linux-on-snapdragon-x-elite.mdx
@@ -27,8 +27,11 @@ Unfortunately, like Apple computers, there is no native out-of-the-box Linux sup
 The effort from Qualcomm and Linaro has been crucial to bring a functional Linux to the new family of ARM64-powered laptops. <strong>The engineering experts from Qualcomm, Linaro and the kernel community have made a stable Linux experience possible across many Qualcomm processors, including the newer Snapdragon X Elite.</strong>
 
 But we are still missing pre-installed Linux laptops. In the x86 processor-based laptop market, many vendors now offer Linux options.
-State of the art:
+
+## State of the art:
+
 Where are we now with the Linux support on these Snapdragon laptops?
+
 A year after the processor announcement, the current Linux Kernel 6.15 already supports many commercial laptops:
 
 - Lenovo Yoga 7x
@@ -77,7 +80,7 @@ _"Many customers are eagerly awaiting an alternative to x86 notebooks, and the n
 
 Here is a video of the <strong>TUXEDO Elite 14 Gen1</strong> prototype showcased at Linaro Connect 2025:
 
-<video controls width="100%">
+<video controls width="50%">
   <source
     src="https://static.linaro.org/videos/8494357F-6B47-4DC4-8C13-99BB510BF447.mp4"
     type="video/mp4"
