swap <u> for bold

--- a/src/content/blogs/becoming-a-kernel-developer-part1-posting-your-first-patch.mdx
+++ b/src/content/blogs/becoming-a-kernel-developer-part1-posting-your-first-patch.mdx
@@ -17,9 +17,9 @@ Contributing to the Linux kernel can seem complex and intimidating. Following th
 
 In this three-part blog series, we will share our experience and know-how, walking you through everything you need to know to write your first patch and become a trusted member of the community. We will break down the entire journey into three blog posts:
 
-    1. <u>Part 1 (this post): Posting Your First Patch.<u>** We'll start with the most critical step: how to prepare, format, and post your patches. Getting this right is the foundation for everything that follows.
-    2. <u>Part 2: Navigating the Review Process.<u> Next, we'll discuss how to handle mailing list reviews. You'll learn how to interpret feedback, revise your work, and collaborate effectively to get your patch merged.
-    3. <u>Part 3: Becoming a Core Contributor.<u> In the final post, we'll explore how to contribute beyond writing your own code by reviewing patches from others, and discuss what the path toward becoming a trusted reviewer or even a subsystem maintainer looks like.
+    1. **Part 1 (this post): Posting Your First Patch.** We'll start with the most critical step: how to prepare, format, and post your patches. Getting this right is the foundation for everything that follows.
+    2. **Part 2: Navigating the Review Process.** Next, we'll discuss how to handle mailing list reviews. You'll learn how to interpret feedback, revise your work, and collaborate effectively to get your patch merged.
+    3. **Part 3: Becoming a Core Contributor.** In the final post, we'll explore how to contribute beyond writing your own code by reviewing patches from others, and discuss what the path toward becoming a trusted reviewer or even a subsystem maintainer looks like.
 
 Let’s get started with preparing your first patch!
 
